attempted Extra Credit

--- a/profile.html
+++ b/profile.html
@@ -9,10 +9,10 @@
       <ol>
         <li class="crumb"><a href="./home.html">Home</a></li>
         <li class="crumb"><a href="./profile.html">Profile</a></li>
+        <li class="crumb"><a href="./hood.html">Neighborhood</a></li>
         <li class="crumb"><a href="./about.html">About</a></li>
       </ol>
     </nav>
-  <body>
     <heading>
         <h1>JEREMY 'FREAKING' MITCHELL</h1>
         <h2>THE *small* MAN THE *unheard of* MYTH THE LEGEND</h2>
